Доработки crud project
