# app/DTO/Requests/ExpenseRequestDTO.php
@@ -1,0 +1,109 @@
+<?php
+
+namespace App\DTO\Requests;
+
+use Spatie\LaravelData\Data;
+
+/**
+ * @OA\Schema(
+ *     schema="ExpenceRequest",
+ *     description="Данные для затрат"
+ * )
+ */
+class ExpenseRequestDTO extends Data
+{
+    /**
+     * @var float
+     *
+     * @OA\Property (
+     *     format="float",
+     *     example="500.00"
+     * )
+     */
+    public float $price;
+
+    /**
+     * @var string
+     *
+     * @OA\Property (
+     *     format="string",
+     *     example="1000.00"
+     * )
+     */
+    public string $date;
+
+    /**
+     * @var string
+     *
+     * @OA\Property (
+     *     format="string",
+     *     example="50"
+     * )
+     */
+    public string $comment;
+
+    /**
+     * @var integer|null
+     *
+     * @OA\Property (
+     *     format="integer",
+     *     example="50"
+     * )
+     */
+    public ?int $projectId;
+
+    /**
+     * @var integer
+     *
+     * @OA\Property (
+     *     format="integer",
+     *     example="50"
+     * )
+     */
+    public int $categoryId;
+
+    /**
+     * @var integer
+     *
+     * @OA\Property (
+     *     format="integer",
+     *     example="50"
+     * )
+     */
+    public int $accountId;
+
+
+    /**
+     * @throws \Exception
+     */
+    public function __construct(
+        ?float  $price = null,
+        ?string $date = null,
+        ?string $comment = null,
+        ?int    $projectId = null,
+        ?int    $categoryId = null,
+        ?int    $accountId = null,
+    )
+    {
+        if (!$price) {
+            throw new \Exception("Price is required");
+        }
+        $this->price = $price;
+        if (!$date) {
+            throw new \Exception("Date is required");
+        }
+        $this->date = $date;
+        if (!$categoryId) {
+            throw new \Exception("Category is required");
+        }
+        $this->categoryId = $categoryId;
+        if (!$accountId) {
+            throw new \Exception("Account is required");
+        }
+        $this->accountId = $accountId;
+
+        $this->projectId = $projectId;
+
+        $this->comment = $comment;
+    }
+}
